--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -32,7 +32,7 @@ solara:
     guild: "1265729442551169094"
     token: "CHANGE"
   tebex:
-    apikey: "d81036ff8350199b24774ce049453698195db78a"
+    apikey: "CHANGE"
 logging:
   level:
     root: info
